--- a/angular-client/Dockerfile
+++ b/angular-client/Dockerfile
@@ -18,9 +18,7 @@ RUN npm run build -- --configuration production
 # ETAPA 2: Servidor Web (Nginx)
 FROM nginx:alpine
 
-# Copiamos el resultado de la build a la carpeta de Nginx
-# IMPORTANTE: Asegúrate de que 'rabbitmq-presentation' coincide con el "outputPath" en tu angular.json
-# Si no estás seguro, usa un 'ls' en la etapa anterior o revisa tu angular.json
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist/*/browser /usr/share/nginx/html
 # Si tu angular es versión vieja (antes de v17), la ruta es /app/dist/NOMBRE_PROYECTO
 
